app_zrpp_qznn/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-qznn
  namespace: test
  labels:
    app: app-qznn
    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-qznn
      
  template:
    metadata:
      labels:
        app: app-qznn
        
    spec:
      containers:
      - name: app-qznn
        image: dockerhub.sihai.com:8081/test/app_zrpp_qznn:20190926093700
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 9966
      imagePullSecrets:
      - name: harbor       

---
apiVersion: v1
kind: Service
metadata:
  name: app-qznn
  namespace: test
spec:
  selector:
    app: app-qznn
  ports:
  - port: 9966
    name: app-qznn
  type: NodePort
